@@ -1,3 +1,10 @@
+2004-09-12  David Reveman  <c99drn@cs.umu.se>
+
+	* src/ic.c (pixman_composite): 
+	* src/iccompose.c (IcFetch_transform, IcFetcha_transform): 
+	* src/icimage.h: Added support for both transform and repeat
+	(thanks to Owen Taylor <otaylor@redhat.com>).
+
 2004-05-06  Carl Worth  <cworth@isi.edu>
 
 	* src/icimage.c (pixman_image_set_clip_region): Leave
